# MPItrampoline

./: .JuliaFormatter.toml  .clang-format  .gitignore  .zenodo.json  BUILD.md  CITATION.cff  CMakeLists.txt  LICENSE.md  MPItrampoline.pc.in  MPItrampolineConfig.cmake.in  README.md  constants.inc  fortran-cpp.sh  functions.inc  generate_mpi_declarations.py  generate_mpi_declarations_fortran.py  generate_mpi_declarations_fortran90.py  generate_mpi_definitions.py  generate_mpi_initializations.py  generate_mpi_initializations_fortran90.py  hello.c  mpi-constants-f.inc  mpi-constants.inc  mpi-functions-f.inc  mpi-functions.inc  mpi-test-cxx.cxx  mpi-test-f.f  mpi-test-f90.f90  mpi-test.c  mpi.c  mpi.f90  mpi.f90.in  mpi.h  mpi_constants.py  mpi_constants_fortran.py  mpi_defaults.h.in  mpi_f08.f90  mpi_f08_impl.f90  mpi_f08_impl_integer_0.f90  mpi_f08_impl_integer_1.f90  (+28 more)
.github/workflows/: CI-integration.yml  CI-mpitrampoline.yml  CI-mpiwrapper.yml  CI.yml  cmake.yml  install-openmpi.sh
doc/: HandleConstants.txt  IntegerConstants.md  documentation.md  print-handle-constants.py
docker/: .gitignore  Dockerfile  Dockerfile.gcc  Dockerfile.llvm  Dockerfile.musl  test-all-gcc.sh  test-all-llvm.sh  test-all-musl.sh  test-all.sh
include/: mpi.F90  mpi.f90  mpi.f90.in  mpi.h  mpi_f08.F90  mpi_f08.f90  mpi_f08.f90.in  mpi_version.h.in  mpif.h  mpif_version.h.in  mpio.h
mpiabi/: mpi_constants.py  mpi_constants_fortran.py  mpi_functions.py  mpi_functions_fortran.py  mpiabi.h  mpiabi_constants.h  mpiabi_f08_constants.f90  mpiabi_f08_functions.f90  mpiabi_f08_types.f90  mpiabi_functions.h  mpiabi_functions_fortran.jl  mpiabi_types.h  mpiabi_version.h  mpiabif.h  mpiabif.h.in  mpiabif_constants.h  mpiabif_functions.h
mpitrampoline/: CMakeLists.txt  generate_trampoline.jl  hello.f90  mpi.h  mpi_constants.h  mpi_f08.f90  mpi_f08_functions.f90  mpi_functions.c  mpi_functions.h  mpi_functions_fortran.c  mpi_types.h  mpiabi_function_pointers.c  mpiabi_function_pointers.h  mpiabi_function_pointers_fortran.c  mpiabi_function_pointers_fortran.h  mpiabi_set_function_pointers_fortran.c  mpif_constants.h  mpif_functions.f90  mpif_functions.h  mpif_functions_old.h  mpitrampoline.c  mpitrampoline.h.in  mpitrampolinef.h  set_mpiabi_function_pointers.c  set_mpiabi_function_pointers_fortran.c
mpitrampoline/include/: mpi.h  mpi_constants.h  mpi_functions.h  mpi_mpiabi_function_pointers.h  mpi_mpitrampoline.h  mpi_types.h  mpiabi_function_pointers_fortran.h  mpif.h  mpif_functions.h  mpif_functions.h.in  mpif_types.h  mpitrampoline.h.in  mpitrampolinef.h.in
mpitrampoline/pkgconfig/: MPItrampoline.pc.in  mpi-c.pc.in  mpi-cxx.pc.in  mpi-fort.pc.in
mpitrampoline/src/: mpi.F90  mpi_f08.F90  mpi_f08_constants.F90  mpi_f08_functions.F90  mpi_f08_functions.F90.in  mpi_f08_types.F90  mpi_functions.c  mpi_functions_fortran.c  mpi_mpiabi_function_pointers.c  mpi_mpiabi_function_pointers_fortran.c  mpi_set_mpiabi_function_pointers.c  mpi_set_mpiabi_function_pointers_fortran.c  mpiabi_function_pointers.c  mpiabi_function_pointers_fortran.c  mpiabi_set_function_pointers.c  mpiabi_set_function_pointers_fortran.c  mpitrampoline.c
mpiwrapper/: .gitignore  CMakeLists.txt  check_twolevel.sh  generate_wrapper.jl  mpiwrapper-mpi3.c  mpiwrapper-mpi40.c  mpiwrapper.F90  mpiwrapper.c  mpiwrapper.f90  mpiwrapper.h.in  mpiwrapper_functions.F90  mpiwrapper_functions.f90  mpiwrapper_functions.manual.F90  mpiwrapper_functions.old.f90
src/: init_mpi_f08.f90  mpi.c
test/: .gitignore  hello-world-c.c  hello-world-cxx.cxx  hello-world-f.f  hello-world-f90.f90  hello-world-fortran  hello-world-fortran.f90  hello-world-fortran08.f90  hello-world.c
